--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,6 @@ winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }
 [[bin]]
 name = "basic_window"
 path = "src/basic_window.rs"
+[[bin]]
+name = "triangle"
+path = "src/triangle.rs"
