--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,6 @@ path = "src/random_programs/triangle.rs"
 [[bin]]
 name = "texture_map"
 path = "src/random_programs/texture_map.rs"
+[[bin]]
+name = "cube"
+path = "src/random_programs/cube.rs"
