correct the vertex attribute formats, nearly there! also start separate depth buffer prog

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,6 @@ path = "src/random_programs/texture_map.rs"
 [[bin]]
 name = "cube"
 path = "src/random_programs/cube.rs"
+[[bin]]
+name = "depth"
+path = "src/random_programs/depth.rs"
